update typo at pricing page

--- a/landing-page/pricing.html
+++ b/landing-page/pricing.html
@@ -35,7 +35,7 @@
                   <li><a class="active" href="pricing.html">Pricing</a></li>
                   <li><a href="https://www.urbanhire.com/employers/customer">Customers</a></li>
                   <li><a href="https://resources.urbanhire.com/" target="_blank">Resources</a></li>
-                  <li><a href="https://www.urbanhire.com/">Search Job</a></li>
+                  <li><a href="https://urbanhire.com/jobs">Search Job</a></li>
                   <li><a href="https://pro.urbanhire.com/signin/">Log In</a></li>
                   <li><a class="btn btn-6" href="https://pro.urbanhire.com/signup">Try for Free</a></li>
                 </ul>
@@ -99,9 +99,9 @@
                       </div>
                     <a href="#" class="btn btn-2-stroke is-lg">Talk to Us!</a>
                     <ul class="pc-list" style="list-style-type: none;">
-                      <li>500 Applicant per Position</li>
-                      <li>7 Active User Accounts</li>
-                      <li>1000 Applicant per Position</li>
+                      <li>20 Active Jobs Opening</li>
+                        <li>10 Active User Accounts</li>
+                        <li>1.000 Applicant per Position</li>
                     </ul>
                   </div>
                 </div>
@@ -119,9 +119,9 @@
                       </div>
                     <a href="#" class="btn btn-2-stroke is-lg">Talk to Us!</a>
                     <ul class="pc-list" style="list-style-type: none;">
-                      <li>3 Active Jobs Opening</li>
-                      <li>3 Active User Accounts</li>
-                      <li>500 Applicant per Position</li>
+                      <li>50 Active Jobs Opening</li>
+                      <li>30 Active User Accounts</li>
+                      <li>3.000 Applicant per Position</li>
                     </ul>
                   </div>
                 </div>
@@ -139,9 +139,9 @@
                       </div>
                     <a href="#" class="btn btn-2-stroke is-lg">Talk to Us!</a>
                     <ul class="pc-list" style="list-style-type: none;">
-                      <li>3 Active Jobs Opening</li>
-                      <li>3 Active User Accounts</li>
-                      <li>500 Applicant per Position</li>
+                      <li>Unlimited Jobs Opening</li>
+                      <li>Unlimited User Accounts</li>
+                      <li>Unlimited Applicants</li>
                     </ul>
                   </div>
                 </div>
@@ -160,7 +160,7 @@
             <ul class="list-plans">
             <li>Custom Hiring Team</li>
             <li>Collaborative Hiring</li>
-            <li>Social Media Job Surfing</li>
+            <li>Social Media Job Sharing</li>
             <li>Free Job Boards</li>
           </ul>
           </div>
@@ -1100,9 +1100,9 @@
                 <div class="col-lg-3 col-md-3 col-xs-6">
                   <h4>JOBSEEKERS</h4>
                   <ul class="list">
-                    <li><a href="#">Job Search</a></li>
-                    <li><a href="#">Englist Test</a></li>
-                    <li><a href="#">Career Advice</a></li>
+                    <li><a href="https://urbanhire.com/jobs">Search Job</a></li>
+                    <li><a href="https://www.urbanhire.com/english-test">Englist Test</a></li>
+                    <li><a href="https://www.urbanhire.com/blog/">Career Advice</a></li>
                     <li><a href="#">Career Fair</a></li>
                   </ul>
                 </div>
