--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -36,7 +36,7 @@
                   <li><a href="pricing.html">Pricing</a></li>
                   <li><a href="https://www.urbanhire.com/employers/customer">Customers</a></li>
                   <li><a href="https://resources.urbanhire.com/" target="_blank">Resources</a></li>
-                  <li><a href="https://www.urbanhire.com/">Search Job</a></li>
+                  <li><a href="https://www.urbanhire.com/jobs">Search Job</a></li>
                   <li><a href="https://pro.urbanhire.com/signin/">Log In</a></li>
                   <li><a class="btn btn-6" href="https://pro.urbanhire.com/signup">Try for Free</a></li>
                 </ul>
@@ -56,8 +56,8 @@
                     <h1 data-aos="fade-up">Take control of your recruitment from discovery to <span>hire.</span></h1>
                     <p data-aos="fade-up" data-aos-delay="300">Urbanhire makes hiring simple and effective. Our cloud solution is a collaborative platform empowering applicant-tracking and resume search by multiple users.</p>
                     <div data-aos="fade-up" data-aos-delay="400">
-                      <a href="#" class="btn is-lg m-r btn-1">Post a Job <i class="icon-published-job"></i></a>
-                      <a href="#" class="btn is-lg btn-3">Search Job <i class="icon-search"></i></a>
+                      <a href="#https://pro.urbanhire.com/jobs/create" class="btn is-lg m-r btn-1">Post a Job <i class="icon-published-job"></i></a>
+                      <a href="https://www.urbanhire.com/jobs" class="btn is-lg btn-3">Search Job <i class="icon-search"></i></a>
                     </div>
                   </div>
                   <div class="col-lg-6 col-md-5 img-hero-wrapper">
@@ -80,7 +80,7 @@
         <div class="content align-ltc">
           <h2 class="section-title">Discover Jobs</h1>
         <p>Find the most popular jobs in the Urbanhire universe</p>
-        <p><a href="#" class="btn btn-3">Go to Job Search <i class="icon-angle-right"></i></a></p>
+        <p><a href="https://www.urbanhire.com/jobs" class="btn btn-3">Go to Search Job <i class="icon-angle-right"></i></a></p>
         </div>
       </div>
       <div class="col-lg-7 col-xs-12 align-ltc">
@@ -446,9 +446,9 @@
                 <div class="col-lg-3 col-md-3 col-xs-6">
                   <h4>JOBSEEKERS</h4>
                   <ul class="list">
-                    <li><a href="#">Job Search</a></li>
-                    <li><a href="#">Englist Test</a></li>
-                    <li><a href="#">Career Advice</a></li>
+                    <li><a href="https://urbanhire.com/jobs">Search Job</a></li>
+                    <li><a href="https://www.urbanhire.com/english-test">Englist Test</a></li>
+                    <li><a href="https://www.urbanhire.com/blog/">Career Advice</a></li>
                     <li><a href="#">Career Fair</a></li>
                   </ul>
                 </div>
