update link at homepage

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -529,10 +529,10 @@
           <div class="modal-box align-center">
             <h2>Urbanhire is changing, for a better!</h2>
             <img src="img/img-interview.svg" alt="">
-            <p>We moved our current Job portal website to new a <a class="link" target="_blank" href="https://www.urbanhire.com/">link</a>.</p>
+            <p>We moved our current Job portal website to new a <a class="link" target="_blank" href="https://urbanhire.com/jobs">link</a>.</p>
             <div class="align-center">
-              <a href="#" class="btn btn-1 is-lg fn-close-modal m-b">Stay on this page</a> &nbsp;
-              <a href="#" class="btn btn-2 is-lg">Go to Search Job</a>
+              <a class="btn btn-1 is-lg fn-close-modal m-b">Stay on this page</a> &nbsp;
+              <a href="https://urbanhire.com/jobs" class="btn btn-2 is-lg">Go to Search Job</a>
             </div>
             <span class="modal-close fn-close-modal"><i class="icon-close"></i></span>
           </div>
