update footer links

--- a/landing-page/pricing.html
+++ b/landing-page/pricing.html
@@ -1103,49 +1103,49 @@
                     <li><a href="https://urbanhire.com/jobs">Search Job</a></li>
                     <li><a href="https://www.urbanhire.com/english-test">Englist Test</a></li>
                     <li><a href="https://www.urbanhire.com/blog/">Career Advice</a></li>
-                    <li><a href="#">Career Fair</a></li>
+                    <li><a href="https://www.urbanhire.com/signin">Sign In as Jobseeker</a></li>
+                    <li><a href="https://www.urbanhire.com/signup">Sign Up as Jobseeker</a></li>
                   </ul>
                 </div>
                 <div class="col-lg-3 col-md-3 col-xs-6">
                   <h4>PRODUCT</h4>
                   <ul class="list">
-                    <li><a href="#">Recruitment Platform</a></li>
-                    <li><a href="#">Online Assessment</a></li>
-                    <li><a href="#">Integration Marketplace</a></li>
-                    <li><a href="#">Referral System</a></li>
-                    <li><a href="#">Resume Search</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">HR Resources</a></li>
-                  </ul>
+                    <li><a href="https://www.urbanhire.com/employers/features">Features</a></li>
+                    <li><a href="https://www.urbanhire.com/employers/f/manage-applicants">Applicant Tracking System</a></li>
+                    <li><a href="https://www.urbanhire.com/employers/resume-search">Resume Search</a></li>
+                    <li><a href="https://www.urbanhire.com/employers/career-site">Career Site</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
                 </div>
                 <div class="col-lg-3 col-md-3 col-xs-6">
                   <h4>COMPANY</h4>
                   <ul class="list">
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Careers</a></li>
-                    <li><a href="#">Customer</a></li>
-                    <li><a href="#">Press</a></li>
+                    <li><a href="https://www.urbanhire.com/about-us">About Us</a></li>
+                    <li><a href="https://www.urbanhire.com/careers">Careers</a></li>
+                    <li><a href="https://www.urbanhire.com/employers/customer">Customers</a></li>
+                    <li><a href="https://www.urbanhire.com/employers/partners">Partners</a></li>
+                    <li><a href="https://resources.urbanhire.com/">Resources</a></li>
+                    <li><a href="https://www.urbanhire.com/employers/press">Press</a></li>
                   </ul>
                 </div>
                 <div class="col-lg-3 col-md-3 col-xs-6">
                   <h4>CONTACT</h4>
                   <ul class="list">
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Help</a></li>
+                    <li><a href="https://www.urbanhire.com/employers/contact-us">Contact Us</a></li>
+                    <li><a href="https://help.urbanhire.com/en/?_ga=2.214624727.1963928984.1546944744-1350513238.1544499724">FAQ</a></li>
                     <li class="contact-info text-s">
                       <p>Contact Sales: 9am - 7pm</p>
                       <p><i class="icon-phone"></i> +62 (21) 2751 8857</p>
-                      <p><i class="icon-mail"></i> support@urbanhire.com</p>
+                      <p><a href="mailto:support@urbanhire.com"><i class="icon-mail"></i> support@urbanhire.com</a></p>
                     </li>
                   </ul>
                   <br>
                   <h4>FOLLOW US</h4>
                   <ul class="list-inline">
-                    <li><a href="#"><i class="icon-facebook text-md"></i></a></li>
-                    <li><a href="#"><i class="icon-twitter text-md"></i></a></li>
-                    <li><a href="#"><i class="icon-instagram text-md"></i></a></li>
-                    <li><a href="#"><i class="icon-youtube text-md"></i></a></li>
+                    <li><a href="https://www.facebook.com/urbanhire" target="_blank"><i class="icon-facebook text-md"></i></a></li>
+                    <li><a href="https://twitter.com/urbanhire" target="_blank"><i class="icon-twitter text-md"></i></a></li>
+                    <li><a href="https://www.linkedin.com/company/urbanhire" target="_blank"><i class="icon-linkedin text-md"></i></a></li>
+                    <li><a href="https://www.instagram.com/urbanhire.id/" target="_blank"><i class="icon-instagram text-md"></i></a></li>
+                    <li><a href="https://www.youtube.com/channel/UC_D8WDhAxl2CaLyIzRSVZ8Q" target="_blank"><i class="icon-youtube text-md"></i></a></li>
                   </ul>
                 </div>
               </div>
