update revision from benson's feedback

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -53,8 +53,8 @@
               <div class="container">
                 <div class="row center-xs">
                   <div class="col-lg-6 col-md-7 text-hero">
-                    <h1 data-aos="fade-up">Take control of your recruitment from discovery to <span>hire.</span></h1>
-                    <p data-aos="fade-up" data-aos-delay="300">Urbanhire makes hiring simple and effective. Our cloud solution is a collaborative platform empowering applicant-tracking and resume search by multiple users.</p>
+                    <h1 data-aos="fade-up">The <span>#1</span> Recruiting and Assessment Platform for Leading Companies</h1>
+                    <p data-aos="fade-up" data-aos-delay="300">Urbanhire is a hiring platform made by recruiters for recruiters. Post jobs to 50+ portals including Google, LinkedIn and Line, filter and track candidates, and deploy online assessments to hit 100% on your hiring plans.</p>
                     <div data-aos="fade-up" data-aos-delay="400">
                       <a href="#https://pro.urbanhire.com/jobs/create" class="btn is-lg m-r btn-1">Post a Job <i class="icon-published-job"></i></a>
                       <a href="https://www.urbanhire.com/jobs" class="btn is-lg btn-3">Search Job <i class="icon-search"></i></a>
@@ -186,6 +186,75 @@
   </div>
 </section>
       <!--end section hilite-->
+
+       <!--start section clients-->
+      <section class="section-clients">
+  <div class="container">
+    <h1 class="section-title align-center">World Class Leading Companies Trust Urbanhire</h1>
+    <div class="row clients middle-sm">
+      <div class="col-sm-2">
+        <img src="img/clients/bpjs-logo.png" alt="Logo BPJS Kesehatan">
+      </div>
+      <div class="col-sm-2">
+        <img src="img/clients/pt-elnusa-logo.png" alt="Logo PT Elnusa">
+      </div>
+      <div class="col-sm-2">
+        <img src="img/clients/logo-zuric.png" alt="Logo Zuric">
+      </div>
+      <div class="col-sm-2">
+        <img src="img/clients/logo-danamon.png" alt="Logo Danamon">
+      </div>
+      <div class="col-sm-2">
+        <img src="img/clients/logo-indodax.png" alt="Logo Indodax">
+      </div>
+      <div class="col-sm-2">
+        <img src="img/clients/logo-djarum.png" alt="Logo Djarum">
+      </div>
+      <div class="col-sm-2">
+        <img src="img/clients/logo-taf.png" alt="Logo TAF">
+      </div>
+      <div class="col-sm-2">
+        <img src="img/clients/logo-body-shop.png" alt="Logo Body Shop">
+      </div>
+      <div class="col-sm-2">
+        <img src="img/clients/bank-sahabat-sampoerna-logo.png" alt="Logo Sahabat Sampoerna">
+      </div>
+      <div class="col-sm-2">
+        <img src="img/clients/logo-kawan-lama.png" alt="Logo Kawan Lama">
+      </div>
+      <div class="col-sm-2">
+        <img src="img/clients/logo-intiland.png" alt="Logo Intiland">
+      </div>
+      <div class="col-sm-2">
+        <img src="img/clients/logo-infomedia.png" alt="Logo Infomedia">
+      </div>
+      <div class="col-sm-2">
+        <img src="img/clients/logo-net1.png" alt="Logo Net1">
+      </div>
+      <div class="col-sm-2">
+        <img src="img/clients/logo-sunlife.png" alt="Logo Sunlife">
+      </div>
+      <div class="col-sm-2">
+        <img src="img/clients/logo-kisel.png" alt="Logo Kisel">
+      </div>
+      <div class="col-sm-2">
+        <img src="img/clients/logo-dexa.png" alt="Logo Dexa">
+      </div>
+      <div class="col-sm-2">
+        <img src="img/clients/logo-east-weed.png" alt="Logo East Weed">
+      </div>
+      <div class="col-sm-2">
+        <img src="img/clients/logo-otsuka.png" alt="Logo Otsuka">
+      </div>
+    </div>
+    <div class="section-cta">
+      <div class="content">
+        <a href="#" class="btn">See more Customers <i class="icon-angle-right"></i></a>
+      </div>
+    </div>
+  </div>
+</section>
+      <!--end section clients-->
 
       <!--start section usp-->
       <section class="section-usp">
@@ -349,74 +418,7 @@
 </section>
       <!--end section testimony-->
 
-      <!--start section clients-->
-      <section class="section-clients">
-  <div class="container">
-    <h1 class="section-title align-center">OUR HAPPY EMPLOYERS</h1>
-    <div class="row clients middle-sm">
-      <div class="col-sm-2">
-        <img src="img/clients/bpjs-logo.png" alt="Logo BPJS Kesehatan">
-      </div>
-      <div class="col-sm-2">
-        <img src="img/clients/pt-elnusa-logo.png" alt="Logo PT Elnusa">
-      </div>
-      <div class="col-sm-2">
-        <img src="img/clients/logo-zuric.png" alt="Logo Zuric">
-      </div>
-      <div class="col-sm-2">
-        <img src="img/clients/logo-danamon.png" alt="Logo Danamon">
-      </div>
-      <div class="col-sm-2">
-        <img src="img/clients/logo-indodax.png" alt="Logo Indodax">
-      </div>
-      <div class="col-sm-2">
-        <img src="img/clients/logo-djarum.png" alt="Logo Djarum">
-      </div>
-      <div class="col-sm-2">
-        <img src="img/clients/logo-taf.png" alt="Logo TAF">
-      </div>
-      <div class="col-sm-2">
-        <img src="img/clients/logo-body-shop.png" alt="Logo Body Shop">
-      </div>
-      <div class="col-sm-2">
-        <img src="img/clients/bank-sahabat-sampoerna-logo.png" alt="Logo Sahabat Sampoerna">
-      </div>
-      <div class="col-sm-2">
-        <img src="img/clients/logo-kawan-lama.png" alt="Logo Kawan Lama">
-      </div>
-      <div class="col-sm-2">
-        <img src="img/clients/logo-intiland.png" alt="Logo Intiland">
-      </div>
-      <div class="col-sm-2">
-        <img src="img/clients/logo-infomedia.png" alt="Logo Infomedia">
-      </div>
-      <div class="col-sm-2">
-        <img src="img/clients/logo-net1.png" alt="Logo Net1">
-      </div>
-      <div class="col-sm-2">
-        <img src="img/clients/logo-sunlife.png" alt="Logo Sunlife">
-      </div>
-      <div class="col-sm-2">
-        <img src="img/clients/logo-kisel.png" alt="Logo Kisel">
-      </div>
-      <div class="col-sm-2">
-        <img src="img/clients/logo-dexa.png" alt="Logo Dexa">
-      </div>
-      <div class="col-sm-2">
-        <img src="img/clients/logo-east-weed.png" alt="Logo East Weed">
-      </div>
-      <div class="col-sm-2">
-        <img src="img/clients/logo-otsuka.png" alt="Logo Otsuka">
-      </div>
-    </div>
-    <div class="section-cta">
-      <div class="content">
-        <a href="#" class="btn">See more Customers <i class="icon-angle-right"></i></a>
-      </div>
-    </div>
-  </div>
-</section>
-      <!--end section clients-->
+     
     </main>
     <!--start footer-->
     <footer class="site-footer">
