update client section

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -193,58 +193,58 @@
     <h1 class="section-title align-center">World Class Leading Companies Trust Urbanhire</h1>
     <div class="row clients middle-sm">
       <div class="col-sm-2">
-        <img src="img/clients/bpjs-logo.png" alt="Logo BPJS Kesehatan">
+        <img src="img/clients/logo-aia.png" alt="Logo AIA">
       </div>
       <div class="col-sm-2">
-        <img src="img/clients/pt-elnusa-logo.png" alt="Logo PT Elnusa">
+        <img src="img/clients/logo-zurich.png" alt="Logo Zurich">
       </div>
       <div class="col-sm-2">
-        <img src="img/clients/logo-zuric.png" alt="Logo Zuric">
+        <img src="img/clients/logo-cimbniaga.png" alt="Logo CIMB Niaga">
       </div>
       <div class="col-sm-2">
         <img src="img/clients/logo-danamon.png" alt="Logo Danamon">
       </div>
       <div class="col-sm-2">
-        <img src="img/clients/logo-indodax.png" alt="Logo Indodax">
+        <img src="img/clients/logo-uob.png" alt="Logo UOB">
+      </div>
+      <div class="col-sm-2">
+        <img src="img/clients/logo-bank-sampoerna.png" alt="Logo Bank Sampoerna">
+      </div>
+      <div class="col-sm-2">
+        <img src="img/clients/logo-bukopin.png" alt="Logo Bank Bukopin">
       </div>
       <div class="col-sm-2">
         <img src="img/clients/logo-djarum.png" alt="Logo Djarum">
       </div>
       <div class="col-sm-2">
-        <img src="img/clients/logo-taf.png" alt="Logo TAF">
+        <img src="img/clients/logo-pertamina.png" alt="Logo Pertamina">
       </div>
       <div class="col-sm-2">
-        <img src="img/clients/logo-body-shop.png" alt="Logo Body Shop">
+        <img src="img/clients/logo-bpjs.png" alt="Logo BPJS">
       </div>
       <div class="col-sm-2">
-        <img src="img/clients/bank-sahabat-sampoerna-logo.png" alt="Logo Sahabat Sampoerna">
+        <img src="img/clients/logo-pegadaian.png" alt="Logo Pegadaian">
       </div>
       <div class="col-sm-2">
-        <img src="img/clients/logo-kawan-lama.png" alt="Logo Kawan Lama">
+        <img src="img/clients/logo-acc.png" alt="Logo ACC">
       </div>
       <div class="col-sm-2">
-        <img src="img/clients/logo-intiland.png" alt="Logo Intiland">
+        <img src="img/clients/logo-kawanlama.png" alt="Logo Kawan Lama">
       </div>
       <div class="col-sm-2">
-        <img src="img/clients/logo-infomedia.png" alt="Logo Infomedia">
+        <img src="img/clients/logo-bodyshop.png" alt="Logo Bodyshop">
       </div>
       <div class="col-sm-2">
-        <img src="img/clients/logo-net1.png" alt="Logo Net1">
+        <img src="img/clients/logo-valbury.png" alt="Logo Valbury">
       </div>
       <div class="col-sm-2">
-        <img src="img/clients/logo-sunlife.png" alt="Logo Sunlife">
+        <img src="img/clients/logo-kitabisa.png" alt="Logo Kitabisa">
       </div>
       <div class="col-sm-2">
-        <img src="img/clients/logo-kisel.png" alt="Logo Kisel">
+        <img src="img/clients/logo-msig.png" alt="Logo MISG">
       </div>
       <div class="col-sm-2">
-        <img src="img/clients/logo-dexa.png" alt="Logo Dexa">
-      </div>
-      <div class="col-sm-2">
-        <img src="img/clients/logo-east-weed.png" alt="Logo East Weed">
-      </div>
-      <div class="col-sm-2">
-        <img src="img/clients/logo-otsuka.png" alt="Logo Otsuka">
+        <img src="img/clients/logo-warungpintar.png" alt="Logo Warung Pintar">
       </div>
     </div>
     <div class="section-cta">
