--- a/landing-page/pricing.html
+++ b/landing-page/pricing.html
@@ -78,7 +78,7 @@
                         </p>
                       </div>
                       <a href="#" class="btn btn-2 is-lg">15 Days Trial</a>
-                      <ul class="pc-list" style="list-style-type: none;">
+                      <ul class="pc-list">
                         <li>3 Active Jobs Opening</li>
                         <li>3 Active User Accounts</li>
                         <li>500 Applicant per Position</li>
@@ -97,8 +97,8 @@
                           Best option for hiring at medium size companies.
                         </p>
                       </div>
-                    <a href="#" class="btn btn-2-stroke is-lg">Talk to Us!</a>
-                    <ul class="pc-list" style="list-style-type: none;">
+                    <a href="mailto:support@urbanhire.com?subject=Interested to know more Professional plan" class="btn btn-2-stroke is-lg">Talk to Us!</a>
+                    <ul class="pc-list">
                       <li>20 Active Jobs Opening</li>
                         <li>10 Active User Accounts</li>
                         <li>1.000 Applicant per Position</li>
@@ -117,8 +117,8 @@
                           A productivity-boosting platform for high-growth teams.
                         </p>
                       </div>
-                    <a href="#" class="btn btn-2-stroke is-lg">Talk to Us!</a>
-                    <ul class="pc-list" style="list-style-type: none;">
+                    <a href="mailto:support@urbanhire.com?subject=Interested to know more Growth plan" class="btn btn-2-stroke is-lg">Talk to Us!</a>
+                    <ul class="pc-list">
                       <li>50 Active Jobs Opening</li>
                       <li>30 Active User Accounts</li>
                       <li>3.000 Applicant per Position</li>
@@ -137,8 +137,8 @@
                           The most comprehensive platform for recruiting at scale.
                         </p>
                       </div>
-                    <a href="#" class="btn btn-2-stroke is-lg">Talk to Us!</a>
-                    <ul class="pc-list" style="list-style-type: none;">
+                    <a href="mailto:support@urbanhire.com?subject=Interested to know more Enterprise plan" class="btn btn-2-stroke is-lg">Talk to Us!</a>
+                    <ul class="pc-list">
                       <li>Unlimited Jobs Opening</li>
                       <li>Unlimited User Accounts</li>
                       <li>Unlimited Applicants</li>
