update menu dropdown for jobseekers

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -36,7 +36,13 @@
                   <li><a href="pricing.html">Pricing</a></li>
                   <li><a href="https://www.urbanhire.com/employers/customer">Customers</a></li>
                   <li><a href="https://resources.urbanhire.com/" target="_blank">Resources</a></li>
-                  <li><a href="https://www.urbanhire.com/jobs">Search Job</a></li>
+                  <li class="has-children">
+                      <a href="https://www.urbanhire.com/jobs">Search Job</a>
+                      <ul>
+                        <li><a href="https://www.urbanhire.com/signin" target="_blank">Sign In as Jobseekers</a></li>
+                        <li><a href="https://www.urbanhire.com/signup" target="_blank">Sign Up as Jobseekers</a></li>
+                      </ul>
+                    </li>
                   <li><a href="https://pro.urbanhire.com/signin/">Log In</a></li>
                   <li><a class="btn btn-6" href="https://pro.urbanhire.com/signup">Try for Free</a></li>
                 </ul>
