update width dropdown menu

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -39,8 +39,8 @@
                   <li class="has-children">
                       <a href="https://www.urbanhire.com/jobs">Search Job</a>
                       <ul>
-                        <li><a href="https://www.urbanhire.com/signin" target="_blank">Sign In as Jobseekers</a></li>
-                        <li><a href="https://www.urbanhire.com/signup" target="_blank">Sign Up as Jobseekers</a></li>
+                        <li><a href="https://www.urbanhire.com/signin" target="_blank">Log In as Jobseekers</a></li>
+                        <li><a href="https://www.urbanhire.com/signup" target="_blank">Register as Jobseekers</a></li>
                       </ul>
                     </li>
                   <li><a href="https://pro.urbanhire.com/signin/">Log In</a></li>
