--- a/urbanstory/src/grid/grid.html
+++ b/urbanstory/src/grid/grid.html
@@ -1,7 +1,7 @@
 <main class="container-fluid">
-    <section>
+    <section class="page-hero">
         <h1>Grid System</h1>
-        <p>A grid system based on the flex display property made by <a href="http://flexboxgrid.com/">Flexbox Grid</a>.</p>
+        <p>A grid system based on the flex display property made by <a class="link-primary" href="http://flexboxgrid.com/">Flexbox Grid</a>.</p>
         <p>Version 6.3.1</p>
     </section>
     
