add avatar group, and search bar

--- a/urbanstory/src/cards/searchbar.html
+++ b/urbanstory/src/cards/searchbar.html
@@ -1,8 +1,12 @@
-<section class="page-hero">
-	<h1>Search Bars</h1>
-</section>
-<section>
-	<div class="search-bar">
-		<input type="text" placeholder="Search 2.801 employee">
-	</div>
-</section>
+<div class="container-fluid">
+	<section class="page-hero">
+		<h1>Search Bars</h1>
+	</section>
+	<section>
+		<div class="card flex search-bar">
+			<input type="text" placeholder="Search 2.801 employee...">
+			<div class="dropdown padd-l">All Departments <i class="icon-caret-down"></i></div>
+			<button class="btn btn-large btn-firm">SEARCH</button>
+		</div>
+	</section>
+</div>
