update url raw directly from github

--- a/urbanstory/pages/collaterals/corporate.html
+++ b/urbanstory/pages/collaterals/corporate.html
@@ -5,8 +5,8 @@
 				<h1>Corporate</h1>
 			</div>
 			<div class="col-xs-12 col-md-6 end-md">
-				<a class="btn btn-large btn-firm" href="../../src/img/corporate/presentation_template_corporate.pptx">Download PPT template</a>&nbsp;
-				<a class="btn btn-large btn-success" href="../../src/img/corporate/corporate.zip">Download images</a>
+				<a class="btn btn-large btn-firm" href="https://github.com/urbanhire/urbanhire.github.io/blob/master/urbanstory/src/img/corporate/presentation_template_corporate.pptx?raw=true" target="_blank">Download PPT template</a>&nbsp;
+				<a class="btn btn-large btn-success" href="https://github.com/urbanhire/urbanhire.github.io/blob/master/urbanstory/src/img/corporate/corporate.zip?raw=true" target="_blank">Download images</a>
 			</div>
 		</div>
 	</section>
