--- a/urbanstory/pages/collaterals/productshowcase.html
+++ b/urbanstory/pages/collaterals/productshowcase.html
@@ -5,7 +5,7 @@
 				<h1>Product Showcase</h1>
 			</div>
 			<div class="col-xs-12 col-md-6 end-md">
-				<a class="btn btn-large btn-success" href="../../src/img/productshowcase/productshowcase.zip">Download images</a>
+				<a class="btn btn-large btn-success" href="https://github.com/urbanhire/urbanhire.github.io/blob/master/urbanstory/src/img/productshowcase/productshowcase.zip?raw=true" target="_blank">Download images</a>
 			</div>
 		</div>
 	</section>
