--- a/urbanstory/pages/forms/select.html
+++ b/urbanstory/pages/forms/select.html
@@ -45,7 +45,7 @@
 &lt;/div&gt;</code></pre>
     </section>
     <section>
-    	<h4>Select disabled</h4>
+    	<h4>Select <code>:disabled</code></h4>
     	<div class="input-form">
     		<select disabled>
     			<option>Option 1</option>
@@ -55,5 +55,62 @@
     			<option>Option 5</option>
     		</select>
     	</div>
+    	<pre><code>&lt;div class=&quot;input-form&quot;&gt;
+    &lt;select disabled&gt;
+        &lt;option&gt;Option 1&lt;/option&gt;
+        &lt;option&gt;Option 2&lt;/option&gt;
+        &lt;option&gt;Option 3&lt;/option&gt;
+        &lt;option&gt;Option 4&lt;/option&gt;
+        &lt;option&gt;Option 5&lt;/option&gt;
+    &lt;/select&gt;
+&lt;/div&gt;</code></pre>
+    </section>
+    <section>
+    	<h4>Select with label & alert</h4>
+    	<div class="input-form">
+    		<label>Choose selection</label>
+    		<select>
+    			<option>Option 1</option>
+    			<option>Option 2</option>
+    			<option>Option 3</option>
+    			<option>Option 4</option>
+    			<option>Option 5</option>
+    		</select>
+    	</div>
+    	<div class="input-form is-danger">
+    		<label>Choose selection</label>
+    		<select>
+    			<option class="text-whisper">Select option</option>
+    			<option>Option 1</option>
+    			<option>Option 2</option>
+    			<option>Option 3</option>
+    			<option>Option 4</option>
+    			<option>Option 5</option>
+    		</select>
+    		<label>You haven't select this option</label>
+    	</div>
+    	<pre><code>&lt;div class=&quot;input-form&quot;&gt;
+    &lt;label&gt;Choose selection&lt;/label&gt;
+    &lt;select&gt;
+        &lt;option&gt;Option 1&lt;/option&gt;
+        &lt;option&gt;Option 2&lt;/option&gt;
+        &lt;option&gt;Option 3&lt;/option&gt;
+        &lt;option&gt;Option 4&lt;/option&gt;
+        &lt;option&gt;Option 5&lt;/option&gt;
+    &lt;/select&gt;
+&lt;/div&gt;
+
+&lt;div class=&quot;input-form is-danger&quot;&gt;
+    &lt;label&gt;Choose selection&lt;/label&gt;
+    &lt;select&gt;
+    	&lt;option&gt;&lt;/option&gt;
+        &lt;option&gt;Option 1&lt;/option&gt;
+        &lt;option&gt;Option 2&lt;/option&gt;
+        &lt;option&gt;Option 3&lt;/option&gt;
+        &lt;option&gt;Option 4&lt;/option&gt;
+        &lt;option&gt;Option 5&lt;/option&gt;
+    &lt;/select&gt;
+    &lt;label&gt;You haven't select this option&lt;/label&gt;
+&lt;/div&gt;</code></pre>
     </section>
 </div>
