--- a/urbanstory/pages/style/logo.html
+++ b/urbanstory/pages/style/logo.html
@@ -9,4 +9,125 @@
 			</div>
 		</div>
 	</section>
+
+	<section>
+		<div class="page-content">
+			<div class="cards-1 logohero">
+				<img src="../../src/img/logo/img-logo-corporate-long.svg" alt="img-logo-corporate-long" height="60px">
+			</div>
+
+			<div class="ve-line"></div>
+
+			<div class="explanation">
+				<h4>Logo Story</h4>
+				<p>We believed in equal opportunity for everyone. We help people to open their doors to those opportunities.
+				</p>
+			</div>
+
+			<div class="list-2">
+				<img src="../../src/img/logo/img-logo-story.svg" alt="img-logo-story" height="100px">
+			</div>
+			
+			<div class="cards-2">
+				<p>Above is an illustration for scaling the Urbanhire's logo. According to the standard size, please do not resize the logo without the same scaling size as it will stretch and disturb the proportion of the logo. For short logo usage, the scaling should be 5 x 3 and it's 25 x 3 for the long logo. 
+				</p>
+			</div>
+		</div>
+
+		<div class="ho-line"></div>
+	</section>
+
+	<section>
+		<div class="row">
+			<h3 class="subheadline">File download</h3>
+			<div class="lists">
+				<div class="cards-2 cards-style">
+					<img src="../../src/img/logo/img-logo-corporate-long.svg" alt="img-logo-corporate-long" height="40px">
+				</div>
+
+				<div class="cards-2 cards-style">
+					<img src="../../src/img/logo/img-logo-corporate-short.svg" alt="img-logo-corporate-short." height="40px">
+				</div>
+
+				<div class="text-box">
+					<p>kindly use this logo for corporate purposes, such as emails signature, stamp, and any marketing for company and corporation.</p>
+				</div>
+
+				<div class="cards-2">
+					<button class="btn btn-firm-o">download logo</button>
+				</div>
+			</div>
+		</div>
+
+		<div class="space"></div>
+
+		<div class="row">
+			<div class="lists">
+				<div class="cards-2 cards-style">
+					<img src="../../src/img/logo/img-logo-jobseeker-long.svg" alt="img-logo-jobseeker-long" height="40px">
+				</div>
+
+				<div class="cards-2 cards-style">
+					<img src="../../src/img/logo/img-logo-jobseeker-short.svg" alt="img-logo-jobseeker-short" height="40px">
+				</div>
+
+				<div class="text-box">
+					<p>kindly use this logo for corporate purposes, such as emails signature, stamp, and any marketing for company and corporation.</p>
+				</div>
+
+				<div class="cards-2">
+					<button class="btn btn-firm-o">download logo</button>
+				</div>
+			</div>
+		</div>
+
+		<div class="space"></div>
+
+
+		<div class="row">
+			<div class="lists">
+				<div class="cards-2 cards-style">
+					<img src="../../src/img/logo/img-logo-gray-long.svg" alt="img-logo-gray-long" height="40px">
+				</div>
+
+				<div class="cards-2 cards-style">
+					<img src="../../src/img/logo/img-logo-gray-short.svg" alt="img-logo-gray-short" height="40px">
+				</div>
+
+				<div class="text-box">
+					<p>This logo is to .</p>
+				</div>
+
+				<div class="cards-2">
+					<button class="btn btn-firm-o">download logo</button>
+				</div>
+			</div>
+		</div>
+
+		<div class="space"></div>
+
+		<div class="row">
+			<div class="lists">
+				<div class="cards-2 cards-style-negative">
+					<img src="../../src/img/logo/img-logo-white-long.svg" alt="img-logo-white-long" height="40px">
+				</div>
+
+				<div class="cards-2 cards-style-negative">
+					<img src="../../src/img/logo/img-logo-white-short.svg" alt="img-logo-white-short" height="40px">
+				</div>
+
+				<div class="text-box">
+					<p>kindly use this logo for corporate purposes, such as emails signature, stamp, and any marketing for company and corporation.</p>
+				</div>
+
+				<div class="cards-2">
+					<button class="btn btn-firm-o">download logo</button>
+				</div>
+			</div>
+		</div>
+
+		<div class="space"></div>
+
+
+	</section>
 </div>
