--- a/urbanstory/pages/style/logo.html
+++ b/urbanstory/pages/style/logo.html
@@ -5,7 +5,7 @@
 				<h1>Logo</h1>
 			</div>
 			<div class="col-xs-12 col-md-6 end-md">
-				<a class="btn btn-large btn-success" href="xxx" target="_blank">Download File</a>
+				<a class="btn btn-large btn-success" href="https://github.com/urbanhire/urbanhire.github.io/blob/master/urbanstory/src/img/logo/urbanhire_logo_pack.zip?raw=true" target="_blank">Download File</a>
 			</div>
 		</div>
 	</section>
@@ -54,7 +54,7 @@
 				</div>
 
 				<div class="cards-2">
-					<button class="btn btn-firm-o">download logo</button>
+					<a href="static/media/img-logo-corporate-long.80340040.svg" target="_blank" class="btn btn-firm-o">download logo</a>
 				</div>
 			</div>
 		</div>
@@ -76,7 +76,7 @@
 				</div>
 
 				<div class="cards-2">
-					<button class="btn btn-firm-o">download logo</button>
+					<a href="static/media/img-logo-jobseeker-long.481cc924.svg" target="_blank" class="btn btn-firm-o">download logo</a>
 				</div>
 			</div>
 		</div>
@@ -99,7 +99,7 @@
 				</div>
 
 				<div class="cards-2">
-					<button class="btn btn-firm-o">download logo</button>
+					<a href="static/media/img-logo-gray-long.2345e8b8.svg" target="_blank" class="btn btn-firm-o">download logo</a>
 				</div>
 			</div>
 		</div>
@@ -121,7 +121,7 @@
 				</div>
 
 				<div class="cards-2">
-					<button class="btn btn-firm-o">download logo</button>
+					<a href="static/media/img-logo-white-long.fd1a02d5.svg" target="_blank" class="btn btn-firm-o">download logo</a>
 				</div>
 			</div>
 		</div>
