update page color

--- a/urbanstory/pages/style/color.html
+++ b/urbanstory/pages/style/color.html
@@ -4,39 +4,37 @@
 	</section>
 	<section>
 		<div class="row">
-			<div class="col-sm-3">
+			<div class="col-sm-2">
 				<h4>Blue Firm</h4>
 				<div class="color-box firm-1">#011148</div>
 				<div class="color-box firm-2">#010b2f</div>
 				<div class="color-box firm-3">#000516</div>
 			</div>
-			<div class="col-sm-3">
+			<div class="col-sm-2">
 				<h4>Blue Median</h4>
 				<div class="color-box median-1">#2791D9</div>
 				<div class="color-box median-2">#2283c4</div>
 				<div class="color-box median-3">#1f74ae</div>
 			</div>
-			<div class="col-sm-3">
+			<div class="col-sm-2">
 				<h4>Blue Prime</h4>
 				<div class="color-box prime-1">#33BEEF</div>
 				<div class="color-box prime-2">#1bb6ed</div>
 				<div class="color-box prime-3">#11a8de</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-3">
+			<div class="col-sm-2">
 				<h4>Danger</h4>
 				<div class="color-box danger-1">#EF4344</div>
 				<div class="color-box danger-2">#ed2c2d</div>
 				<div class="color-box danger-3">#eb1415</div>
 			</div>
-			<div class="col-sm-3">
+			<div class="col-sm-2">
 				<h4>Warning</h4>
 				<div class="color-box warning-1">#FFCE07</div>
 				<div class="color-box warning-2">#edbe00</div>
 				<div class="color-box warning-3">#d3a900</div>
 			</div>
-			<div class="col-sm-3">
+			<div class="col-sm-2">
 				<h4>Success</h4>
 				<div class="color-box success-1">#2FBD90</div>
 				<div class="color-box success-2">#2aa980</div>
@@ -44,15 +42,185 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-sm-3">
+			<div class="col-sm-2">
 				<h4>Greyscale</h4>
 				<div class="color-box grey-1">#F5F5F5</div>
 				<div class="color-box grey-2">#D6D6D6</div>
 				<div class="color-box grey-3">#C2C2C2</div>
+			</div>
+			<div class="col-sm-2">
+				<h4>-</h4>
 				<div class="color-box grey-4">#A3A3A3</div>
 				<div class="color-box grey-5">#757575</div>
 				<div class="color-box grey-6">#212121</div>
 			</div>
 		</div>
 	</section>
+	<section>
+		<table class="table-comfort">
+			<thead class="align-left">
+				<tr>
+					<th>Color</th>
+					<th>Name</th>
+					<th>Use</th>
+					<th>SCSS</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td><div class="color-box firm-1">#011148</div></td>
+					<td>Blue Firm 1</td>
+					<td>Primary button</td>
+					<td><code>$c-firm-1</code></td>
+				</tr>
+				<tr>
+					<td><div class="color-box firm-2">#010b2f</div></td>
+					<td>Blue Firm 2</td>
+					<td>Hover state of Primary button</td>
+					<td><code>$c-firm-2</code></td>
+				</tr>
+				<tr>
+					<td><div class="color-box firm-2">#000516</div></td>
+					<td>Blue Firm 3</td>
+					<td>Active state of Primary button</td>
+					<td><code>$c-firm-3</code></td>
+				</tr>
+				<tr>
+					<td><div class="color-box median-1">#2791D9</div></td>
+					<td>Blue Median 1</td>
+					<td>Link text</td>
+					<td><code>$c-median-1</code></td>
+				</tr>
+				<tr>
+					<td><div class="color-box median-2">#2283c4</div></td>
+					<td>Blue Median 2</td>
+					<td>Hover link text</td>
+					<td><code>$c-median-2</code></td>
+				</tr>
+				<tr>
+					<td><div class="color-box median-3">#1f74ae</div></td>
+					<td>Blue Median 3</td>
+					<td>Active link text</td>
+					<td><code>$c-median-3</code></td>
+				</tr>
+
+				<tr>
+					<td><div class="color-box prime-1">#33BEEF</div></td>
+					<td>Blue Prime 1</td>
+					<td>Jobseeker prime color</td>
+					<td><code>$c-prime-1</code></td>
+				</tr>
+				<tr>
+					<td><div class="color-box prime-2">#1bb6ed</div></td>
+					<td>Blue Prime 2</td>
+					<td>Jobseeker prime color</td>
+					<td><code>$c-prime-2</code></td>
+				</tr>
+				<tr>
+					<td><div class="color-box prime-3">#11a8de</div></td>
+					<td>Blue Prime 3</td>
+					<td>Jobseeker prime color</td>
+					<td><code>$c-prime-3</code></td>
+				</tr>
+
+				<tr>
+					<td><div class="color-box danger-1">#EF4344</div></td>
+					<td>Danger 1</td>
+					<td>Danger Button / Text</td>
+					<td><code>$c-red-1</code></td>
+				</tr>
+				<tr>
+					<td><div class="color-box danger-2">#ed2c2d</div></td>
+					<td>Danger 2</td>
+					<td>Danger Button / Text</td>
+					<td><code>$c-red-2</code></td>
+				</tr>
+				<tr>
+					<td><div class="color-box danger-3">#eb1415</div></td>
+					<td>Danger 3</td>
+					<td>Danger Button / Text</td>
+					<td><code>$c-red-3</code></td>
+				</tr>
+
+				<tr>
+					<td><div class="color-box warning-1">#2FBD90</div></td>
+					<td>Warning 1</td>
+					<td>Alert, toast.</td>
+					<td><code>$c-yellow-1</code></td>
+				</tr>
+				<tr>
+					<td><div class="color-box warning-2">#2aa980</div></td>
+					<td>Warning 2</td>
+					<td>Alert, toast.</td>
+					<td><code>$c-yellow-2</code></td>
+				</tr>
+				<tr>
+					<td><div class="color-box warning-3">#259471</div></td>
+					<td>Warning 3</td>
+					<td>Alert, toast.</td>
+					<td><code>$c-yellow-3</code></td>
+				</tr>
+
+				<tr>
+					<td><div class="color-box success-1">#2FBD90</div></td>
+					<td>Success 1</td>
+					<td>Success Button / Text</td>
+					<td><code>$c-green-1</code></td>
+				</tr>
+				<tr>
+					<td><div class="color-box success-2">#2aa980</div></td>
+					<td>Success 2</td>
+					<td>Success Button / Text</td>
+					<td><code>$c-green-2</code></td>
+				</tr>
+				<tr>
+					<td><div class="color-box success-3">#259471</div></td>
+					<td>Success 3</td>
+					<td>Success Button / Text</td>
+					<td><code>$c-green-3</code></td>
+				</tr>
+
+				<tr>
+					<td><div class="color-box grey-1">#F5F5F5</div></td>
+					<td>Grey 1</td>
+					<td>Background</td>
+					<td><code>$c-grey-1</code></td>
+				</tr>
+				<tr>
+					<td><div class="color-box grey-2">#D6D6D6</div></td>
+					<td>Grey 2</td>
+					<td>Border</td>
+					<td><code>$c-grey-2</code></td>
+				</tr>
+				<tr>
+					<td><div class="color-box grey-3">#C2C2C2</div></td>
+					<td>Grey 3</td>
+					<td>Border 2</td>
+					<td><code>$c-grey-3</code></td>
+				</tr>
+
+				<tr>
+					<td><div class="color-box grey-4">#A3A3A3</div></td>
+					<td>Grey 4</td>
+					<td>Text link</td>
+					<td><code>$c-grey-4</code></td>
+				</tr>
+				<tr>
+					<td><div class="color-box grey-5">#757575</div></td>
+					<td>Grey 5</td>
+					<td>Secondary body color</td>
+					<td><code>$c-grey-5</code></td>
+				</tr>
+				<tr>
+					<td><div class="color-box grey-6">#212121</div></td>
+					<td>Grey 6</td>
+					<td>Body Color</td>
+					<td><code>$c-grey-6</code></td>
+				</tr>
+
+
+			</tbody>
+		</table>
+	</section>
+	
 </div>
