--- a/urbanstory/pages/collaterals/jobseeker.html
+++ b/urbanstory/pages/collaterals/jobseeker.html
@@ -5,8 +5,12 @@
 				<h1>Job Seeker</h1>
 			</div>
 			<div class="col-xs-12 col-md-6 end-md">
-				<a class="btn btn-large btn-firm" href="https://github.com/urbanhire/urbanhire.github.io/blob/master/urbanstory/src/img/jobseeker/presentation_template__job_seeker.pptx?raw=true" target="_blank">Download PPT template</a>&nbsp;
-				<a class="btn btn-large btn-success" href="https://github.com/urbanhire/urbanhire.github.io/blob/master/urbanstory/src/img/jobseeker/jobseeker.zip?raw=true" target="_blank">Download images</a>
+				<a class="btn btn-large btn-firm"
+					href="https://github.com/urbanhire/urbanhire.github.io/blob/master/urbanstory/src/img/jobseeker/presentation_template__job_seeker.pptx?raw=true"
+					target="_blank">Download PPT template</a>&nbsp;
+				<a class="btn btn-large btn-success"
+					href="https://github.com/urbanhire/urbanhire.github.io/blob/master/urbanstory/src/img/jobseeker/jobseeker.zip?raw=true"
+					target="_blank">Download images</a>
 			</div>
 		</div>
 	</section>
