Changed code for slider

--- a/urbanstory/.storybook/preview-head.html
+++ b/urbanstory/.storybook/preview-head.html
@@ -1,10 +1,6 @@
 <link href="https://fonts.googleapis.com/css?family=Barlow:400,400i,600,600i,700,700i" rel="stylesheet" />
 <link rel="stylesheet" type="text/css" href="https://uh-font-cdn.urbanhire.com/uh-font.min.css" />
-<link rel="stylesheet" type="text/css"
-    href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/13.1.5/nouislider.min.css" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/13.1.5/nouislider.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/wnumb/1.1.0/wNumb.min.js"></script>
 
 <!-- Script for List page -->
 <script>
@@ -20,31 +16,23 @@
     });
 </script>
 
-<!-- Script for Slider-->
+<!-- Script for Slider -->
 <script>
     $(document).ready(function () {
-        let slider = document.getElementById('slider');
-
-        noUiSlider.create(slider, {
-            animate: true,
-            animationDuration: 200,
-            tooltips: [wNumb({
-                decimals: 0,
-                thousand: '.',
-                prefix: 'Rp',
-                suffix: ',-'
-            }), wNumb({
-                decimals: 0,
-                thousand: '.',
-                prefix: 'Rp',
-                suffix: ',-'
-            })],
-            start: [9000000, 80000000],
-            connect: true,
-            range: {
-                'min': 0,
-                'max': 100000000
-            }
-        });
+        (function () {
+            let slider = document.getElementById("slider");
+            let min = slider.getAttribute('min');
+            let max = slider.getAttribute('max');
+            let value = (slider.value - min) / (max - min) * 100;
+            slider.style.background = `linear-gradient(90deg, #011148 ${value}%, #d6d6d6 ${value}%)`;
+        })();
     });
+
+    function onRangeChange() {
+        let slider = document.getElementById("slider");
+        let min = slider.getAttribute('min');
+        let max = slider.getAttribute('max');
+        let value = (slider.value - min) / (max - min) * 100;
+        slider.style.background = `linear-gradient(90deg, #011148 ${value}%, #d6d6d6 ${value}%)`;
+    }
 </script>
