--- a/urbanstory/storybook-static/iframe.html
+++ b/urbanstory/storybook-static/iframe.html
@@ -58,14 +58,22 @@
   } catch (e) {
     // eslint-disable-next-line no-console
     console.warn('unable to connect to parent frame for connecting dev tools');
-  }</script><link href="https://fonts.googleapis.com/css?family=Barlow:400,400i,600,600i,700,700i" rel="stylesheet"><link rel="stylesheet" href="https://uh-font-cdn.urbanhire.com/uh-font.min.css"><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script><script>$(document).ready(function () {
-        $(".list.has-icon a").click(function () {
-            let elem = $(this);
-            if (!elem.hasClass("active")) {
-                elem.addClass("active");
-            } else {
-            	elem.removeClass("active");
-            }
+  }</script><link href="https://fonts.googleapis.com/css?family=Barlow:400,400i,600,600i,700,700i" rel="stylesheet"><link rel="stylesheet" href="https://uh-font-cdn.urbanhire.com/uh-font-staging.min.css"><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script><script>$(document).ready(function () {
 
-        });
-    });</script></head><body><div class="sb-nopreview sb-wrapper"><div class="sb-nopreview_main"><h1 class="sb-nopreview_heading sb-heading">No Preview</h1><p>Sorry, but you either have no stories or none are selected somehow.</p><ul><li>Please check the Storybook config.</li><li>Try reloading the page.</li></ul><p>If the problem persists, check the browser console, or the terminal you've run Storybook from.</p></div></div><div class="sb-errordisplay sb-wrapper"><div id="error-message" class="sb-heading"></div><pre class="sb-errordisplay_code"><code id="error-stack"></code></pre></div><div id="root"></div><script src="runtime~main.75fea05a37d5453edbf3.bundle.js"></script><script src="vendors~main.75fea05a37d5453edbf3.bundle.js"></script><script src="main.75fea05a37d5453edbf3.bundle.js"></script></body></html>
+        // function for Components > List
+        var listCheck = function(){
+
+            $(".list.has-icon a").click(function () {
+                let elem = $(this);
+                if (!elem.hasClass("active")) {
+                    elem.addClass("active");
+                } else {
+                    elem.removeClass("active");
+                }
+
+            });
+        }
+        //init function
+        listCheck();
+
+    });</script></head><body><div class="sb-nopreview sb-wrapper"><div class="sb-nopreview_main"><h1 class="sb-nopreview_heading sb-heading">No Preview</h1><p>Sorry, but you either have no stories or none are selected somehow.</p><ul><li>Please check the Storybook config.</li><li>Try reloading the page.</li></ul><p>If the problem persists, check the browser console, or the terminal you've run Storybook from.</p></div></div><div class="sb-errordisplay sb-wrapper"><div id="error-message" class="sb-heading"></div><pre class="sb-errordisplay_code"><code id="error-stack"></code></pre></div><div id="root"></div><script src="runtime~main.c1efe26d232b10a479bc.bundle.js"></script><script src="vendors~main.c1efe26d232b10a479bc.bundle.js"></script><script src="main.c1efe26d232b10a479bc.bundle.js"></script></body></html>
